--- a/board-qemu/config
+++ b/board-qemu/config
@@ -1,6 +1,6 @@
 BOARD=qemu
 TARG=ppc64
-export FLAG=-DRTAS_NVRAM
+export FLAG="-DRTAS_NVRAM -DBROKEN_SC1"
 export CPUARCH=ppcp7
 export CPUARCHDEF=-DCPU_PPCP7
 #export SNK_BIOSEMU_APPS=1
